# grambuilder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  guniconf.py  pyproject.toml
builder/: __init__.py  api.py  core.py  loaders.py
builder/parsers/: __init__.py  base.py
tests/: test.grxml  test_builder.py
tests/test_parsers/: test_base_parser.py
web/: servlet.py  views.py
web/static/templates/: base.html
